--- a/MassAutoGarage/Views/HRMS_Bonus/Index.cshtml
+++ b/MassAutoGarage/Views/HRMS_Bonus/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MassAutoGarage.Models.AddOnsMaster.AddOnsMasterModel>
+﻿@model List<MassAutoGarage.Models.HRMS_Bonus.HRMSBonusModel>
 
 @{
     ViewBag.Title = "Bonus";
@@ -170,13 +170,9 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.2.2/css/buttons.dataTables.min.css">
 }
 
-
-
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
-
-
             <div class="card-header main-f">
                 <div class="row">
                     <div class="col-md-6 col-5"> <h5 class="card-title mb-0 gp-detail">HRMS - BONUS</h5></div>
@@ -185,14 +181,6 @@
                     </div>
                 </div>
             </div>
-
-            @*<div class="card-header">
-            <h5 class="card-title mb-0">HRMS - BONUS</h5>
-            <a href="@Url.Action("Bonus","HRMS_Bonus")" class="btn btn-primary" style="float:right;" tabindex="1"><i class="ri-add-circle-line align-middle me-1"></i>ADD BONUS</a>
-        </div>*@
-
-
-
             <div class="card-body">
                 <div class="col-lg-12">
                     <div class="live-preview">
@@ -217,6 +205,7 @@
                         <thead>
                             <tr>
                                 <th style=" width: 1%;">S.N.</th>
+                                <th style="white-space: nowrap">Branch Name</th>
                                 <th style="white-space: nowrap">Employee Name</th>
                                 <th style="white-space: nowrap">Bonus Amount</th>
                                 <th style="white-space: nowrap">Bonus Date</th>
@@ -228,23 +217,31 @@
                             </tr>
                         </thead>
                         <tbody>
-                        </tbody>
-                    </table>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td data-th="Srl.No.">@i</td>
+                                    <td data-th="Srl.No.">@item.BranchName</td>
+                                    <td data-th="Code">@item.EmployeeName</td>
+                                    <td data-th="Srl.No.">@item.BonusAmount</td>
+                                    <td data-th="Code">@item.BonusDate</td>
+                                    <td data-th="Srl.No.">@item.Remarks</td>
 
-                    <table id="CompanyGroup" class="table pure-table" style="width: 100%; display: none;" cellspacing="0" cellpadding="0">
-                        <thead>
-                            <tr>
-                                <th colspan="5">
-                                    <img src="@ViewBag.compnylgo" alt="" style="width: 213px; border-radius: 7px;">
-                                    <span style=" float: right;"> <b>Address  :-</b> @ViewBag.compnyAddress</span>
-                                </th>
-                            </tr>
-                            <tr>
-                                <th style=" width: 1%;">Srl.No</th>
-                                <th style="white-space: nowrap">Sales Name</th>
-                            </tr>
-                        </thead>
-                        <tbody>
+                                    <td data-th="Action">
+                                        <div class="d-flex gap-2">
+                                            <div class="edit">
+
+                                                <a href="/HRMS_Bonus/Bonus?Id=@item.Idencrept" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Edit <i class="fa fa-edit"></i></a>
+                                            </div>
+                                            <div class="remove">
+                                                <a href="javascript:void(0)" onclick="return DeleteBonus('@item.Idencrept')" class="btn btn-sm btn-danger remove-item-btn">Delete <i class="fa fa-trash" aria-hidden="true"></i></a>
+
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                i++;
+                            }
                         </tbody>
                     </table>
                 </div>
@@ -253,11 +250,11 @@
     </div>
 
 </div>
-
 @section scripts{
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
     <!--datatable js-->
+
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
     <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
@@ -273,7 +270,8 @@
     <!-- App js -->
     <script src="~/assets/js/app.js"></script>
 }
-<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+
+<script src="~/MyApp/HRMS_Bonus.js"></script>
 
 <script>
     $(document).ready(function () {
@@ -296,51 +294,7 @@
 
     });
 
-    function ConfirmDelete(GrdId) {
-        debugger;
-        var x = confirm("Are you sure you want to delete?");
-        if (x)
-
-            if (GrdId > 0) {
-                $.ajax({
-                    url: '/AddOnsMaster/DeleteAddONS',
-                    type: "GET",
-                    dataType: "json",
-                    data: { AddONSID: GrdId },
-                    success: function (result) {
-                        if (result == "3") {
-
-                            swal({
-                                title: "Success",
-                                text: "Records Successfully Deleted",
-                                type: "success",
-                            }).then(function (isConfirm) {
-                                if (isConfirm) {
-
-                                    window.location.reload();
-                                } else {
-
-                                }
-                            });
-
-                        } else {
-
-                            swal("Warning", "Records not Deleted", "warning");
-                        }
-
-                    },
-                    error: function (xhr, status) {
-                        console.log(status);
-                        console.log(xhr);
-                    },
-                    complete: function () {
-
-                    }
-                });
-            }
-            else
-                return false;
-    }
+   
 
     $('#txtsearch').change(function () {
 
@@ -351,7 +305,7 @@
         debugger;
 
         var SearchKey = $('#txtsearch').val();
-        var url = "/AddOnsMaster/OnsDetails?Key=" + SearchKey;
+        var url = "/HRMS_Bonus/Index?Key=" + SearchKey;
         window.location.href = url;
     }
     function generate() {
